<resources>
    <string name="app_name">HagoTestYMeMuevoUnMonton</string>
    <string name="Clave">Clave de acceso</string>
    <string name="HacerFoto">Hacer Foto</string>
    <string name="Galeria">Seleccionar Galeria</string>
    <string name="Entrar">Entrar</string>
    <string name="Preparar">Preparar Preguntas</string>
    <string name="Aprender">Aprender</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Correcta">RESPUESTA CORRECTA</string>
    <string name="Pregunta">PREGUNTA</string>
    <string name="Incorrecta">RESPUESTA INCORRECTA</string>
    <string name="Mostrar">Mostrar Preguntas</string>
    <string name="Añadir">Añadir</string>
    <string name="Modificar">Modificar</string>
    <string name="Borrar">Borrar</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Sonido">Sonidos</string>
    <string name="Ver">Ver Logros</string>
    <string name="Metros">Metros Recorridos</string>
    <string name="Logros">Logros</string>
    <string name="BorrarL">Borrar Logros</string>
    <string name="ALARMA">ALARMA</string>
    <string name="minutos">Minutos:</string>
</resources>